# mdconverter

./: .gitignore  AGENTS.md  BUILD_WINDOWS.md  CLAUDE.md  README.md  RELEASE_NOTES_v0.2.0.md  pyproject.toml  requirements.txt
.github/workflows/: build-windows.yml
src/: AGENTS.md
src/mdconverter/: AGENTS.md  __init__.py  __main__.py  app.py  converter.py  progress_stream.py  worker.py
