[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdconverter"
version = "0.4.0"
description = "Local GUI tool to convert documents to Markdown using microsoft/markitdown"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ShuheiKonno" }]
dependencies = [
    "markitdown[all]>=0.1.5",
    "customtkinter>=5.2.2",
    "tkinterdnd2>=0.4.2",
]

[project.optional-dependencies]
build = ["pyinstaller>=6.6.0"]

[project.gui-scripts]
mdconverter = "mdconverter.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mdconverter = ["*.md"]
